--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     <link rel="icon" type="image/logo2.jpg">
     <h1 style="margin-top: auto;">DoSTone Mermer</h1>
-    deneme
+    deneme index içinde değişiklik yapıldı git clone ile repo bilgisayara indirilir
  </body>
 
 </html>
