banner açıklaması eklendi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
      <!--<div><img id="banner" src="images/banner1.JPG" alt=""></div-->
      <header>
-        <h2 >doSTone Marble ----buraya banner koyalım</h2>
+        <h2 >doSTone Marble ----dil seçimi ve logo olsun...buraya banner koyalım</h2>
           <img  src="images/logo.jpg">
       </header>
       <div class="scrollmenu" style="text-align:center" >
