--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 
 
-      <h2>soldaki seçime göre taşları listeliycez.taşların üstüne tıklayınca fiyat teklif formu açılacak</h2>
+      <h2>soldaki seçime göre taşları listeliycez.
+        taşların üstüne tıklayınca fiyat teklif formu açılacak
+      butonlar gizli olsun resmin üzerine gelince gözüksün</h2>
       <nav>
           <h3>Taş Seçiminiz</h3>
         <ul>
@@ -43,18 +45,24 @@
 
  <div>
    
-     <table>
-         <tr><th><img class="sergi" src="images/crema_extra.JPG" alt="Krem" width="300px" height="300px"></th>
-         <th><img class="sergi" src="images/calacata_extra.JPG" alt="calacata" width="300px" height="300px"></th>
-         <th><img class="sergi" src="images/lilac.JPG" alt="Lila" width="300px" height="300px"></th></tr>
-         <tr><th><img class="sergi" src="images/afrodit.jpg" alt="afrodit" width="300px" height="300px"></th>
-         <th><img class="sergi" src="images/belvedere.jpg" alt="belvedere" width="300px" height="300px"></th>
-         <th><img class="sergi" src="images/blackdiamond.jpeg" alt="blackdiamond" width="300px" height="300px"></th></tr>
-     </table>
+  <div class="container">
+    <img src="images/crema_extra.JPG" alt="Crema">
+    <button class="btn">Fiyat Teklifi Al</button>
+  </div>
+  <div class="container">
+    <img src="images/calacata_extra.JPG" alt="Calacata">
+    <button class="btn">Fiyat Teklifi Al</button>
+  </div>
+  <div class="container">
+    <img src="images/belvedere.JPG" alt="Belvedere">
+    <button class="btn">Fiyat Teklifi Al</button>
+  </div>
+  <div class="container">
+    <img src="images/afrodit.jpg" alt="Afrodit">
+    <button class="btn">Fiyat Teklifi Al</button>
+  </div>
  </div>
-      <footer>
-        <p>Footer</p>
-      </footer>
+      <footer><h2 >FOOTER......doSTone Marble ----</h2></footer>
       
  </body>
 
