--- a/index.html
+++ b/index.html
@@ -45,23 +45,20 @@
 
  <div>
    
-  <div class="container">
-    <img src="images/crema_extra.JPG" alt="Crema">
-    <button class="btn">Fiyat Teklifi Al</button>
-  </div>
-  <div class="container">
-    <img src="images/calacata_extra.JPG" alt="Calacata">
-    <button class="btn">Fiyat Teklifi Al</button>
-  </div>
-  <div class="container">
-    <img src="images/belvedere.JPG" alt="Belvedere">
-    <button class="btn">Fiyat Teklifi Al</button>
-  </div>
-  <div class="container">
-    <img src="images/afrodit.jpg" alt="Afrodit">
-    <button class="btn">Fiyat Teklifi Al</button>
-  </div>
- </div>
+    <div class="container">
+    <table>
+    <tr>
+        <th><img src="images/crema_extra.JPG" alt="Crema"><button class="btn">Fiyat Teklifi Al</button></th>
+        <th><img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+        <th> <img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+    </tr>
+    <tr>
+      <th><img src="images/crema_extra.JPG" alt="Crema"><button class="btn">Fiyat Teklifi Al</button></th>
+      <th><img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+      <th> <img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+    </tr>
+ 
+</table></div>
       <footer><h2 >FOOTER......doSTone Marble ----</h2></footer>
       
  </body>
