--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2 >doSTone Marble ----dil seçimi ve logo olsun...buraya banner koyalım</h2>
           <img  src="images/logo.jpg">
       </header>
-      <div class="scrollmenu" style="text-align:center" >
+      <div  class="scrollmenu" style="text-align:center" >
         <ul>
             <li><a class="aktif" href="#index">Ana sayfa</a></li>
             <li><a href="#">Hakkımızda</a></li>
@@ -21,8 +21,6 @@
             <li><a href="#">İletişim</a></li>
           </ul>
       </div>
-
-
 
       <h2>soldaki seçime göre taşları listeliycez.
         taşların üstüne tıklayınca fiyat teklif formu açılacak
@@ -45,20 +43,31 @@
 
  <div>
    
-    <div class="container">
-    <table>
+    <table class="container">
     <tr>
-        <th><img src="images/crema_extra.JPG" alt="Crema"><button class="btn">Fiyat Teklifi Al</button></th>
-        <th><img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
-        <th> <img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+        <th>
+          <img src="images/crema_extra.JPG" alt="Crema">
+          <button class="btn">Fiyat Teklifi Al</button>
+        </th>
+        <th>
+          <img src="images/calacata_extra.JPG" alt="Calacata">
+          <button class="btn">Fiyat Teklifi Al</button></th>
+        <th> 
+          <img src="images/calacata_extra.JPG" alt="Calacata">
+          <button class="btn">Fiyat Teklifi Al</button></th>
     </tr>
     <tr>
-      <th><img src="images/crema_extra.JPG" alt="Crema"><button class="btn">Fiyat Teklifi Al</button></th>
-      <th><img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
-      <th> <img src="images/calacata_extra.JPG" alt="Calacata"><button class="btn">Fiyat Teklifi Al</button></th>
+      <th>
+        <img src="images/crema_extra.JPG" alt="Crema">
+        <button class="btn">Fiyat Teklifi Al</button></th>
+      <th>
+        <img src="images/calacata_extra.JPG" alt="Calacata">
+        <button class="btn">Fiyat Teklifi Al</button></th>
+      <th>
+        <img src="images/calacata_extra.JPG" alt="Calacata">
+        <button class="btn">Fiyat Teklifi Al</button></th>
     </tr>
- 
-</table></div>
+</table>
       <footer><h2 >FOOTER......doSTone Marble ----</h2></footer>
       
  </body>
