--- a/index.html
+++ b/index.html
@@ -40,33 +40,16 @@
         </ul>
       </nav>
 
- <div>
-   
-    <table class="container">
-    <tr>
-        <th>
-          <img src="images/crema_extra.JPG" alt="Crema">
-          <button class="btn">Fiyat Teklifi Al</button>
-        </th>
-        <th>
-          <img src="images/calacata_extra.JPG" alt="Calacata">
-          <button class="btn">Fiyat Teklifi Al</button></th>
-        <th> 
-          <img src="images/calacata_extra.JPG" alt="Calacata">
-          <button class="btn">Fiyat Teklifi Al</button></th>
-    </tr>
-    <tr>
-      <th>
-        <img src="images/crema_extra.JPG" alt="Crema">
-        <button class="btn">Fiyat Teklifi Al</button></th>
-      <th>
-        <img src="images/calacata_extra.JPG" alt="Calacata">
-        <button class="btn">Fiyat Teklifi Al</button></th>
-      <th>
-        <img src="images/calacata_extra.JPG" alt="Calacata">
-        <button class="btn">Fiyat Teklifi Al</button></th>
-    </tr>
-</table>
+ <div class="container">
+   <div><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi">
+    <a href="#">Lorem, ipsum dolor.</a>
+   </div>
+   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>    
+   <span><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi"></span>
+   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>      
+   <span><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi"></span>
+   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>
+ </div>     
       <footer><h2 >FOOTER......doSTone Marble ----</h2></footer>
       
  </body>
