--- a/index.html
+++ b/index.html
@@ -1,57 +1,106 @@
-<!Doctype html>
-<html>
-   
- <head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-     <title>DoSTone Marble</title>
- <link rel="stylesheet" href="css/style.css">
- </head>
- <body>
-     <!--<div><img id="banner" src="images/banner1.JPG" alt=""></div-->
-     <header>
-        <h2 >doSTone Marble ----dil seçimi ve logo olsun...buraya banner koyalım</h2>
-          <img  src="images/logo.jpg">
-      </header>
-      <div  class="scrollmenu" style="text-align:center" >
-        <ul>
-            <li><a class="aktif" href="#index">Ana sayfa</a></li>
-            <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">Ürünler</a></li>
-            <li><a href="#">İletişim</a></li>
-          </ul>
-      </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <h2>soldaki seçime göre taşları listeliycez.
-        taşların üstüne tıklayınca fiyat teklif formu açılacak
-      butonlar gizli olsun resmin üzerine gelince gözüksün</h2>
-      <nav>
-          <h3>Taş Seçiminiz</h3>
-        <ul>
-          <li><a href="#">traverten</a></li>
-          <li><a href="#">Onix</a></li>
-          <li><a href="#">Granit</a></li>
-        </ul>
-        <h3>Renk Seçiminiz</h3>
-        <ul>
-            <li><a href="#">Beyaz</a></li>
-            <li><a href="#">Krem</a></li>
-            <li><a href="#">Bej</a></li>
-            <li><a href="#">Kahve</a></li>
-        </ul>
-      </nav>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
- <div class="container">
-   <div><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi">
-    <a href="#">Lorem, ipsum dolor.</a>
-   </div>
-   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>    
-   <span><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi"></span>
-   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>      
-   <span><img src="images/crema_extra.JPG" alt="Crema" title="ürün bilgisi"></span>
-   <span><img src="images/calacata_extra.JPG" alt="Calacata" title="ürün bilgisi"></span>
- </div>     
-      <footer><h2 >FOOTER......doSTone Marble ----</h2></footer>
-      
- </body>
+    <title>DoStone Marble</title>
+    <link rel="shortcut icon" href="/icon.ico" type="image/x-icon">
 
+  </head>
+  <body>
+    <main class="container">
+        <header class="row bg-secondary">
+                <div class="col-sm-3">
+                    <img class="w-100" src="images/logo2.jpg" alt="">
+                </div>
+                <div class="col-sm-6 bg-info">
+                    <h2>Kaliteli Seçiminiz ...<strong>DoStone Marble</strong></h2>
+                    <h3><em>Doğal Taş Bizim İşimiz</em></h3>        
+                </div>
+                <div class="col-sm-3 bg-primary">
+                    <h2>dil seçimi olsun en-tr-arapça</h2>
+                </div>
+        </header>
+        <nav class="row bg-warning">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-2" href="#">Ana Sayfa</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-2" href="#">Hakkımızda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-2" href="#">Ürünler</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-2">İletişim</a>
+                </li>
+              </ul>
+            </nav>
+           <div class="row"><!--bu ksım menun altında kalan 12 lik 
+                                ızgara 4 ü aside bar için 8 lik resim section ı için  
+                                olmak üzere iki parçaya bölündü -->
+            <aside class="col-sm-4 bg-danger"><!--ürün filtreleme kısmı-->
+                <ul class="fs-3"><!--Türe göre filtre--> 
+                    <h2 class="fw-bold fs-2">Taş Seçiniz</h2>
+                    <li>Traverten</li>
+                    <li>Onyx</li>
+                    <li>Granit</li>
+                </ul>
+                <ul class="fs-3"><!--renge göre filtre--> 
+                    <h2 class="fw-bold fs-2">Renk Seçiniz</h2>
+                    <li>Beyaz</li>
+                    <li>Gri</li>
+                    <li>Bej</li>
+                    <li>Krem</li>
+                    <li>Kahverengi</li>
+                </ul>
+            </aside>
+            <section class="col-sm-8 bg-secondary"><!--ürün fotoğraflarının gösterildiği kısım -->
+                <div class="row"><!--ürün fotoğrafları birinci satırı -->
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/afrodit.jpg">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/calacata_extra.JPG">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/belvedere.jpg">
+                    </div>
+                </div>
+                 <div class="row"><!--ürün fotoğrafları ikinci satırı -->
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/empredor.JPG">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/blackdiamond.jpeg">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="w-100" src="images/lilac.JPG">
+                    </div>
+                </div>
+            
+            </section>
+        </div>
+        <footer class="row bg-info">
+            <h2>footer-----Kaliteli Seçiminiz ...<strong>DoStone Marble</strong></h2>
+        </footer>
+    </main>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
