--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   </head>
   <body>
-    <main class="container">
+    <div class="main">
+    <div class="container"><!--container start. includes header and nav-->
         <header class="row bg-secondary">
                 <div class="col-sm-3">
                     <img class="w-100" src="images/logo2.jpg" alt="">
@@ -27,7 +28,7 @@
                 </div>
         </header>
         <nav class="row bg-warning">
-            <ul class="nav justify-content-center">
+            <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link fw-bold fs-2" href="#">Ana Sayfa</a>
                 </li>
@@ -38,59 +39,111 @@
                   <a class="nav-link fw-bold fs-2" href="#">Ürünler</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-2">İletişim</a>
+                  <a class="nav-link fw-bold fs-2" href="#">İletişim</a>
                 </li>
               </ul>
-            </nav>
-           <div class="row"><!--bu ksım menun altında kalan 12 lik 
-                                ızgara 4 ü aside bar için 8 lik resim section ı için  
-                                olmak üzere iki parçaya bölündü -->
-            <aside class="col-sm-4 bg-danger"><!--ürün filtreleme kısmı-->
-                <ul class="fs-3"><!--Türe göre filtre--> 
-                    <h2 class="fw-bold fs-2">Taş Seçiniz</h2>
-                    <li>Traverten</li>
-                    <li>Onyx</li>
-                    <li>Granit</li>
-                </ul>
-                <ul class="fs-3"><!--renge göre filtre--> 
-                    <h2 class="fw-bold fs-2">Renk Seçiniz</h2>
-                    <li>Beyaz</li>
-                    <li>Gri</li>
-                    <li>Bej</li>
-                    <li>Krem</li>
-                    <li>Kahverengi</li>
-                </ul>
-            </aside>
-            <section class="col-sm-8 bg-secondary"><!--ürün fotoğraflarının gösterildiği kısım -->
-                <div class="row"><!--ürün fotoğrafları birinci satırı -->
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/afrodit.jpg">
-                    </div>
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/calacata_extra.JPG">
-                    </div>
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/belvedere.jpg">
-                    </div>
-                </div>
-                 <div class="row"><!--ürün fotoğrafları ikinci satırı -->
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/empredor.JPG">
-                    </div>
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/blackdiamond.jpeg">
-                    </div>
-                    <div class="col-sm-4">
-                        <img class="w-100" src="images/lilac.JPG">
-                    </div>
-                </div>
-            
-            </section>
+              <span class="border border-bottom"></span>
+        </nav>
+    </div><!--container end. includes header and nav-->
+    <div class="container mt-2"><!--container start. includes carousel-->
+        <div class="row bg-warning"><!-- carousel row start -->
+         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/carousel_pic1.JPG" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/carousel_pic2.JPG" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/carousel_pic3.JPG" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <footer class="row bg-info">
-            <h2>footer-----Kaliteli Seçiminiz ...<strong>DoStone Marble</strong></h2>
-        </footer>
-    </main>
+      </div><!-- carousel row end --> 
+    </div><!--container end. includes carousel-->
+    <div class="container"><!-- pictures container start -->
+        <div class="row"><!-- picture row start -->
+                <div class="col-sm-4 border bg-info">
+                  <p>Lorem ipsum dolor sit amet.</p>
+                  <p>Consequuntur officia dignissimos earum nesciunt!</p>
+                  <p>Reiciendis est modi neque cum.</p>
+                  <p>Iste minus expedita molestiae provident!</p>
+                </div>
+                <div class="col-sm-4 border bg-primary">
+                  <p>Lorem ipsum dolor sit amet.</p>
+                  <p>Repellendus perferendis fugiat quasi soluta.</p>
+                  <p>Totam id fugit non tenetur.</p>
+                  <p>Recusandae provident placeat repellendus labore!</p>
+                </div>
+                <div class="col-sm-4 border bg-secondary">
+                  <p>Lorem ipsum dolor sit amet.</p>
+                  <p>Exercitationem ipsam eius nobis corporis!</p>
+                  <p>Ut optio consequatur a nisi.</p>
+                  <p>Assumenda beatae saepe itaque facere.</p>
+                </div>
+        </div><!--picture row end-->
+    </div><!--pictures container end -->-->
+    <div class="container footer-menu bg-dark text-light">
+              <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="accordion-click">Ürünler</h6>
+                        <ul>
+                          <li>Lorem, ipsum.</li>
+                          <li>Inventore, quaerat.</li>
+                          <li>Nobis, minus!</li>
+                          <li>Fuga, numquam.</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <h6 class="accordion-click">Projeler</h6>
+                          <ul>
+                            <li>Lorem, ipsum.</li>
+                            <li>Animi, culpa.</li>
+                            <li>Illo, explicabo.</li>
+                            <li>Fugit, magni?</li>
+                          </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <h6 class="accordion-click">Kurumsal</h6>
+                        <ul>
+                          <li>Lorem, ipsum.</li>
+                          <li>Animi, culpa.</li>
+                          <li>Illo, explicabo.</li>
+                          <li>Fugit, magni?</li>
+                        </ul>  
+                    </div>
+                    <div class="col-sm-3">
+                  <h6 class="accordion-click">İletişim</h6>
+                  <ul>
+                    <li>Lorem, ipsum.</li>
+                    <li>Animi, culpa.</li>
+                    <li>Illo, explicabo.</li>
+                    <li>Fugit, magni?</li>
+                  </ul>
+                    </div>
+              </div>
+    </div>    
+    <div class="container bg-warning">
+                <div class="row footer-credit">
+                   <h4>2022 © DoStone Mermer</lh4>
+                </div>
+    </div>
+    </div><!--main end-->             
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -102,5 +155,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+  </div><!-- Main sonu-1.div -->
   </body>
 </html>
