--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div><!-- carousel row end --> 
+      </div><!-- carousel row end ---------> 
     </div><!--container end. includes carousel-->
     <div class="container"><!-- pictures container start -->
         <div class="row"><!-- picture row start -->
