--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <nav class="row bg-warning">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-2" href="#">Ana Sayfa</a>
+                  <a class="nav-link fw-bold fs-2" href="index.html">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-2" href="#">Hakkımızda</a>
+                  <a class="nav-link fw-bold fs-2" href="aboutus.html">Hakkımızda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-2" href="#">Ürünler</a>
+                  <a class="nav-link fw-bold fs-2" href="urunler.html">Ürünler</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-2" href="#">İletişim</a>
+                  <a class="nav-link fw-bold fs-2" href="iletisim.html">İletişim</a>
                 </li>
               </ul>
               <span class="border border-bottom"></span>
@@ -55,13 +55,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/carousel_pic1.JPG" class="d-block w-100" alt="...">
+              <img src="images/carousel_pic1.JPG" width="13000px" height="500px" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/carousel_pic2.JPG" class="d-block w-100" alt="...">
+              <img src="images/carousel_pic2.JPG" width="13000px" height="500px" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/carousel_pic3.JPG" class="d-block w-100" alt="...">
+              <img src="images/carousel_pic3.JPG" width="13000px" height="500px" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
