--- a/iletisim.html
+++ b/iletisim.html
@@ -16,6 +16,7 @@
     <li>In, mollitia.</li>
 </ul>
 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis necessitatibus repellat laudantium praesentium nostrum voluptatum tenetur earum commodi rem unde est aliquam impedit numquam, ipsum sint nobis, dolor nesciunt ducimus.</p>
 
    </p> 
 </body>
