--- a/iletisim.html
+++ b/iletisim.html
@@ -16,7 +16,8 @@
     <title>DoStone Marble</title>
     <link rel="shortcut icon" href="/icon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/448c51aa7a.js" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/index.js" charset="utf-8"></script>
   </head>
   <body>
 
